Hente data fra api og vse frem quotes

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <!-- Quoute  -->
     <div class="quote-text">
         <i class="fas fa-quote-left">
-            <span id="quote">Quote goes here, quote goes out there</span>
+            <span id="quote"></span>
         </i>
     </div>
     <!-- Author element-->
     <div class="quote-author">
-        <span id="author">
-            Buddah
+        <span class="author" id="author">
+
         </span>
     </div>
     <!-- Buttons -->
@@ -29,7 +29,7 @@
         <button class="twitter-button" id="twitter" title="Tweet this!">
             <i class="fab fa-twitter"></i>
         </button>
-        <button class="new-quote">New Quote!</button>
+        <button class="new-quote" id="new-quote">New Quote!</button>
     </div>
 </div>
     <!-- Script -->
